samples/_failures_safe/1761401914_671409_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d301fb9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_7d301fb9.c:149:9: error: expected declaration or statement at end of input
  149 |         }
      |         ^
./samples/SAFE/__tmp_7d301fb9.c:149:9: error: expected declaration or statement at end of input
